Changelog
=========

8.4-dev - (unreleased)
----------------------
* Change: Added tutorials link on edit page
  [szabozo0 refs #18400]

8.3 - (2014-03-10)
------------------
* Change: Always display the tutorials and example links on edit
  [szabozo0 refs #18400]
* Change: Link video tutorials within documentation
  [avoinea]

8.2 - (2014-02-03)
------------------
* Bug fix: Fixed path handling of internal links
  [ghicaale refs #16666]

8.1 - (2014-01-22)
------------------
* Bug fix: Fixed the case then provenance URL points to a view or template
  [ghicaale refs #16666]
* Feature: adding Sphinx-generated documentation in Page Template format
  [batradav refs #9502]

8.0 - (2014-01-14)
------------------
* Bug fix: Don't reload edit page after a file was uploaded
  [szabozo0]
* Feature: When adding internal link for data provenance add the object as a related item
  [ghicaale refs #16666]

7.9 - (2013-12-09)
------------------
* Feature: Save chart's customized size in the DAVIZ_CHARTS annotation
  [szabozo0 refs #17453]

7.8 - (2013-10-04)
------------------
* Change: Updated package dependencies to reference the newly prefered Zope
  locations that require minimum Plone 4.1
  [ichimdav refs #15651]

7.7 - (2013-09-06)
------------------
* No changes

7.6 - (2013-08-30)
------------------
* Bug fix: Display data owner title in provenance info
  [szabozo0 #16585]

7.5 - (2013-06-17)
------------------
* Feature: Changed data provenance to allow multiple data provenances; and precedence of provenances
  [szabozo0 #9561]
* Bug fix: add an override for manage_beforeDelete to trigger a
  DavizWillBeRemovedEvent; intercept this event to delete the annotation
  on the backreferenced object that involves the deleted daviz
  [tiberich #14341]
* Bug fix: pylint fixes
  [ghicaale refs #14554]
* Feature: locales improved [lepri]

7.4 - (2013-04-17)
------------------
* Bug fix: fix migration in eea.relations integration
  [tiberich #14267]

7.3 - (2013-03-20)