@@ -1,7 +1,7 @@
 <?xml version="1.0"?>
 <metadata>
   <description>EEA Daviz profile</description>
-  <version>7.9</version>
+  <version>8.4</version>
   <dependencies>
     <dependency>profile-eea.forms:default</dependency>
     <dependency>profile-eea.sparql:default</dependency>
