@@ -14,6 +14,7 @@
  <property name="filter_content_types">True</property>
  <property name="allowed_content_types">
   <element value="Image"/>
+  <element value="File"/>
  </property>
  <property name="allow_discussion">False</property>
  <property name="default_view">daviz-view.html</property>
